テストを移動

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -72,4 +72,4 @@ FetchContent_Declare(Catch2
   GIT_TAG        v3.0.1)
 FetchContent_MakeAvailable(Catch2)
 
-add_subdirectory(main)
+add_subdirectory(enumerate_view)
