--- a/tests/enumerate_view/CMakeLists.txt
+++ b/tests/enumerate_view/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.12)
-project(main_tests CXX)
+project(enumerate_view_tests CXX)
 
 # ${CMAKE_PROJECT_NAME}: project name of the root CMakeLists.txt
 # ${PROJECT_NAME}: project name of the current CMakeLists.txt
 add_executable(${PROJECT_NAME}
-  main.cpp
+  enumerate_view.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
