--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -11,18 +11,18 @@ on:
 jobs:
   build:
     name: ${{matrix.pkg_name}}, C++${{matrix.std}}, ${{matrix.build_type}} build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
       matrix:
         pkg_name:
-          - g++-11
+          - g++-12
           # - clang-13
         build_type: [Debug, Release]
         std: [20]
         include:
-          - pkg_name: g++-11
-            compiler: g++-11
+          - pkg_name: g++-12
+            compiler: g++-12
           # - pkg_name: clang-13
           #   compiler: clang++-13
 
